// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should match disabled snapshot 1`] = `
<button
  class="sc-AykKC bgmUOJ"
  disabled=""
  type="button"
>
  Continue
</button>
`;

exports[`Button should match snapshot 1`] = `
<button
  class="sc-AykKC gWdNek"
  type="button"
>
  Continue
</button>
`;
